Prepare backend for Railway deployment

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://vishaljaware10_db_user:6CaTA16oCr8E9IsJ@imdb.bakcchc.mongodb.net/IMDB?appName=IMDB
 #MONGO_URI=mongodb://127.0.0.1:27017/IMDB
 JWT_SECRET=supersecretkey123
+NODE_ENV=production
